refactor examples: 重构示例代码并添加新功能
- 将 cells 示例重命名为 smtpointers
- 删除 cell 和 refcell 模块的原有代码
- 新增 mybox 模块，实现自定义智能指针 MyBox
- 更新 main 函数，添加新的示例测试
- 新增 RefCellCounter 结构体和相关测试

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 
 [[example]]
-name = "Cells"
-path = "examples/cells/lib.rs"
+name = "smtpointers"
+path = "examples/smtpointers/lib.rs"
