docs: 添加 rust-one-hour 示例项目
添加新的示例项目 "rust-one-hour"，用于演示 Rust 基础概念，包括全局常量、静态变量、变量绑定、Clone 和 Copy 特性等。同时在 Cargo.toml 中添加对应配置项，并启用 VSCode 中的 Rust 依赖图功能。

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ edition = "2021"
 [[example]]
 name = "smtpointers"
 path = "examples/smtpointers/lib.rs"
+
+[[example]]
+name = "rustonehour"
+path = "examples/rust-one-hour/lib.rs"
