--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ resolver = "2"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [workspace.dependencies]
+anyhow = "1.0.94"
 async-trait = "0.1.83"
 futures = "0.3.31"
 libp2p = { version = "0.54.1", features = [
