feat/examples: 添加基于 libp2p 的实验性服务器示例
- 新增 renderzvous 示例项目，实现了一个简单的 libp2p 服务器
- 示例功能包括：
  - 使用 TCP、DNS、KAD、mDNS 等协议
  - 支持 identify、rendezvous、ping 等特性
- 通过新增示例项目，验证 libp2p 作为 p2p 通信底层基础设施的可行性

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "examples/rust-one-hour",
     "examples/chaos",
     "examples/smtpointers",
+    "examples/renderzvous",
 ]
 resolver = "2"
 
@@ -19,6 +20,7 @@ anyhow = "1.0.94"
 async-trait = "0.1.83"
 futures = "0.3.31"
 libp2p = { version = "0.54.1", features = [
+    "identify",
     "tokio",
     "dns",
     "kad",
@@ -27,6 +29,8 @@ libp2p = { version = "0.54.1", features = [
     "macros",
     "tcp",
     "yamux",
+    "rendezvous",
+    "ping",
 ] }
 tokio = { version = "1.42.0", features = ["full"] }
 tracing = "0.1.41"
