--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,10 +8,12 @@ repos:
     - id: end-of-file-fixer
     - id: check-yaml
     - id: check-added-large-files
-    - id: cargo fmt
-      name: cargo fmt
-      language: system
-      types: [rust]
-      entry: cargo fmt --all -- --check
-      files: Cargo.toml|.rs
 
+-   repo: local
+    hooks:
+    - id: cargo-fmt
+      name: cargo fmt
+      entry: cargo fmt --all -- --check
+      language: rust
+      types: [rust]
+      files: \.rs$
