refactor: 重命名项目文件夹和依赖项
- 将 "renderzvous" 重命名为 "rendezvous"
- 更新 Cargo.lock 和 Cargo.toml 中的相关引用

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ members = [
     "examples/rust-one-hour",
     "examples/chaos",
     "examples/smtpointers",
-    "examples/renderzvous",
+    "examples/rendezvous",
 ]
 resolver = "2"
 
