--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ members = [
     "examples/rust-one-hour",
     "examples/chaos",
     "examples/smtpointers",
-    "examples/rendezvous",
+    "examples/rendezvous", "examples/wordecar",
 ]
 resolver = "2"
 
