build(wordecar): 优化构建配置并添加日志记录功能
- 新增 .cargo/config.toml 文件，配置 Linux 和 Windows 平台的链接器
- 更新 Cargo.lock 文件，添加新的依赖项
- 修改 wordecar/Cargo.toml，添加日志记录相关依赖
- 在 profile.dev 中设置 opt-level 为 1，提高开发时的性能

--- a/examples/wordecar/Cargo.toml
+++ b/examples/wordecar/Cargo.toml
@@ -1,8 +1,21 @@
 [package]
 name = "wordecar"
 description = "Word E-car is game built on bevy engine and it is helpful to learn new words in a fun way which control the e-car running safely."
-version.workspace = true
+version = "0.1.0"
 edition.workspace = true
 
+
+[profile.dev]
+opt-level = 1
+
 [dependencies]
-bevy = "0.15.0"
+bevy = { version = "0.15.0" }
+# , features = [
+#     "bevy/dynamic",
+#     "bevy/ecs",
+#     "bevy/reflect",
+#     "bevy/utils",
+# ]
+anyhow = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
